--- a/src/app/home/table/table.component.scss
+++ b/src/app/home/table/table.component.scss
@@ -28,3 +28,16 @@
 .tg .tg-ojej{font-size:36px;text-align:left;vertical-align:top}
 .tg .tg-k9gz{background-color:#C2FFD6;font-size:36px;text-align:right;vertical-align:top}
 .tg .tg-26ym{background-color:#C2FFD6;font-size:36px;text-align:left;vertical-align:top}
+.tail{
+    font-family:Arial, sans-serif;
+    font-size:14px;
+    font-weight:normal;
+    padding:13px 20px;
+    border-style:solid;
+    border-width:0px;
+   // overflow:hidden;
+    word-break:normal;
+    border-color:#bbb;
+    color:#493F3F;
+    background-color:#9DE0AD;
+}
