--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,7 @@
     </ion-col>
     <ion-col size-md='6'>
       <ion-item lines='none'>
-        <ion-label>ORDERS</ion-label>
+        <ion-label>Orders Tabel</ion-label>
       </ion-item>
         <app-table></app-table>
     </ion-col>
